# little-loadshedder

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
examples/: client.rs  microservice.rs
metrics/: dashboard.json  docker-compose.yml
metrics/grafana/: datasource.yml  grafana.ini
metrics/prometheus/: prometheus.yml
src/: lib.rs
