[package]
name = "underload"
version = "0.1.0"
edition = "2018"
publish = ["metaswitch"]

[dependencies]
thiserror = "1"
tokio = { version = "1", default-features = false, features = ["sync"] }
tower = "0.4"

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["make"] }
futures = "0.3"
rand = "0.8"
