[package]
name = "underload"
description = "Latency-based load-shedding hyper/tower middleware"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/microsoft/underload"
keywords = ["hyper", "middleware", "load"]
categories = ["network-programming"]
exclude = ["metrics"]

[dependencies]
metrics = "0.17"
thiserror = "1"
tokio = { version = "1", default-features = false, features = ["sync"] }
tower = "0.4"

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["make"] }
futures = "0.3"
rand = "0.8"
metrics-exporter-prometheus = "0.6"
structopt = "0.3"
dialoguer = "0.8"
