[package]
name = "little-loadshedder"
description = "Latency-based load-shedding hyper/tower middleware"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/Skepfyr/little-loadshedder"
keywords = ["hyper", "middleware", "load"]
categories = ["network-programming"]
exclude = ["metrics"]

[dependencies]
metrics = { version = "0.20", optional = true }
tokio = { version = "1", default-features = false, features = ["sync"] }
tower = { version = "0.4", features = ["util"] }

[dev-dependencies]
dialoguer = "0.10"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
metrics = "0.20"
metrics-exporter-prometheus = "0.11"
rand = "0.8"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["make"] }
version-sync = "0.9.4"
